--- a/front/src/styles/css/style.css
+++ b/front/src/styles/css/style.css
@@ -1043,46 +1043,112 @@ a {
 }
 .gap-0 {
   gap: 0px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-0 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-1 {
   gap: 5px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-1 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-2 {
   gap: 10px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-2 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-3 {
   gap: 15px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-3 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-4 {
   gap: 20px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-4 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-5 {
   gap: 25px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-5 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-6 {
   gap: 30px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-6 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-7 {
   gap: 35px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-7 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-8 {
   gap: 40px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-8 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-9 {
   gap: 45px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-9 {
+    flex-wrap: wrap;
+  }
 }
 
 .gap-10 {
   gap: 50px;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 992px) {
+  .gap-10 {
+    flex-wrap: wrap;
+  }
 }
 
 .flex-justify-start {
